samples/_failures_safe/1761129450_3c0bb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_855869fc.c: In function ‘pointcloud_add_point’:
./samples/SAFE/__tmp_855869fc.c:137:5: error: expected declaration or statement at end of input
  137 |     cloud->count++;
      |     ^~~~~
